feat: implement SimBedDebug UI page for monitoring and managing NPC bed assignments